--- a/SofaAppen/SofaAppen.Android/SofaAppen.Android.csproj
+++ b/SofaAppen/SofaAppen.Android/SofaAppen.Android.csproj
@@ -101,5 +101,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\home.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\zoo_tower.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
