--- a/SofaAppen/SofaAppen/SofaAppen.csproj
+++ b/SofaAppen/SofaAppen/SofaAppen.csproj
@@ -15,5 +15,11 @@
     <EmbeddedResource Update="Views\AnimalsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\EventsDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\EventsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
