--- a/SofaAppen/SofaAppen.Android/Properties/AndroidManifest.xml
+++ b/SofaAppen/SofaAppen.Android/Properties/AndroidManifest.xml
@@ -3,4 +3,5 @@
 	<uses-sdk android:minSdkVersion="29" android:targetSdkVersion="30" />
 	<application android:label="SofaAppen.Android" android:theme="@style/MainTheme"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.CAMERA" />
 </manifest>
