--- a/SofaAppen/SofaAppen/SofaAppen.csproj
+++ b/SofaAppen/SofaAppen/SofaAppen.csproj
@@ -20,10 +20,10 @@
     <EmbeddedResource Update="Views\AnimalsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\HistoryPage.xaml">
+    <EmbeddedResource Update="Views\EventDetailPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\EventsDetailPage.xaml">
+    <EmbeddedResource Update="Views\HistoryPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Views\EventsPage.xaml">
